<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/firstMenu"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/children"
            android:icon="@drawable/ic_people"
            android:title="@string/my_classes" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_setting_2"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/secondMenu"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_logout"
            android:title="@string/exit" />
    </group>

</menu>