<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_classes">

    <fragment
        android:id="@+id/nav_classes"
        android:name="com.example.alfa_bank_android_app_teacher.ui.classes.ClassesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.alfa_bank_android_app_teacher.ui.notification.NotificationFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.alfa_bank_android_app_teacher.ui.setting.SettingFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/authorizationFragment"
        android:name="com.example.alfa_bank_android_app_teacher.ui.authorization.AuthorizationFragment"
        android:label="fragment_authorization"
        tools:layout="@layout/fragment_authorization" />
    <fragment
        android:id="@+id/shedulerFragment"
        android:name="com.example.alfa_bank_android_app_teacher.ui.sheduler.ShedulerFragment"
        android:label="fragment_sheduler"
        tools:layout="@layout/fragment_sheduler" />
</navigation>